# subtitle-forge

./: .gitignore  LICENSE  README.md  pyproject.toml  subtitle-forge.toml
.github/workflows/: ci.yml  codeql.yml
examples/: movie.en.srt  movie.en.vtt  movie.es.srt
src/subtitle_forge/: __init__.py  __main__.py  argos.py  bidi.py  cleanup.py  cli.py  config.py  errors.py  executables.py  hybrid.py  languages.py  logging_config.py  models.py  normalization.py  prompting.py  providers.py  quality.py  subtitles.py  translation.py  utils.py
tests/: test_argos.py  test_bidi.py  test_cleanup.py  test_cli.py  test_config.py  test_executables.py  test_normalization.py  test_providers.py  test_quality.py  test_subtitles.py  test_translation.py
