[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "subtitle-forge"
version = "0.1.0"
description = "Translate existing SRT and VTT subtitle files while preserving timings."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Subtitle Forge contributors" }
]
keywords = ["subtitles", "translation", "srt", "vtt", "codex"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Video",
  "Topic :: Text Processing :: Linguistic",
]
dependencies = [
  "argostranslate>=1.9.6",
  "httpx>=0.27.0",
  "srt>=3.5.3",
  "typer>=0.12.5",
  "webvtt-py>=0.5.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-cov>=6.1",
  "ruff>=0.11.0",
  "mypy>=1.16.0",
]

[project.scripts]
subtitle-forge = "subtitle_forge.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/subtitle_forge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov --no-cov-on-fail"

[tool.coverage.run]
source = ["src/subtitle_forge"]
relative_files = true

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "RUF", "B", "C4", "SIM", "TCH", "PT"]

[tool.ruff.lint.isort]
known-first-party = ["subtitle_forge"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
explicit_package_bases = true
mypy_path = "src"
